--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <div id="menu-section" style="display: none;">
     <h2>Menu</h2>
     <button onclick="showNewOrder()">New Order</button>
-    <button onclick="alert('Fitur Edit Order belum aktif')">Edit Order</button>
-    <button onclick="alert('Fitur Tarik Data belum aktif')">Tarik Data</button>
+    <button onclick="showEditOrder()">Edit Order</button>
+    <button onclick="showTarikData()">Tarik Data</button>
   </div>
 
   <!-- Konten Dinamis -->
