--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <!-- Supabase SDK dan JavaScript App -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script src="app.js"></script>
+  <script src="app.js" defer></script>
 
 </body>
 </html>
