--- a/index.html
+++ b/index.html
@@ -2,38 +2,34 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Aplikasi Persewaan Ruang Meeting</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Meeting Room Rental</title>
   <style>
-    body { font-family: sans-serif; margin: 2rem; }
-    input, select, button { display: block; margin: 1rem 0; padding: 0.5rem; width: 100%; max-width: 400px; }
-    button { cursor: pointer; }
-    #menu-section, #content-section { margin-top: 2rem; }
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    #menu-section button { margin-right: 10px; }
+    input, select, button { display: block; margin: 5px 0; padding: 6px; width: 300px; }
+    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+    th { background-color: #f0f0f0; }
   </style>
 </head>
 <body>
-
-  <!-- Halaman Login -->
   <div id="login-section">
-    <h2>Masukkan Password</h2>
-    <input type="password" id="password-input" placeholder="Password" />
+    <h2>Login</h2>
+    <input type="password" id="password-input" placeholder="Masukkan Password" />
     <button onclick="checkPassword()">Masuk</button>
   </div>
 
-  <!-- Menu Utama -->
-  <div id="menu-section" style="display: none;">
+  <div id="menu-section" style="display:none">
     <h2>Menu</h2>
     <button onclick="showNewOrder()">New Order</button>
     <button onclick="showEditOrder()">Edit Order</button>
     <button onclick="showTarikData()">Tarik Data</button>
   </div>
 
-  <!-- Konten Dinamis -->
   <div id="content-section"></div>
 
-  <!-- Supabase SDK dan JavaScript App -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script src="app.js" defer></script>
-
 </body>
 </html>
