--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     th { background-color: #f0f0f0; }
   </style>
 </head>
-<body>
+<body><p align=center>
   <div id="login-section">
     <h2>Login</h2>
     <input type="password" id="password-input" placeholder="Masukkan Password" />
@@ -30,6 +30,6 @@
   <div id="content-section"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script src="app.js" defer></script>
+  <script src="app.js" defer></script></p>
 </body>
 </html>
