--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     th { background-color: #f0f0f0; }
   </style>
 </head>
-<body><p align=center>
+<body><p align=center><img src="https://raw.githubusercontent.com/dru90n/kuis-kepribadian/refs/heads/main/Bgbgbg.png" width="60%"></p>
+  <center>
   <div id="login-section">
     <h2>Login</h2>
     <input type="password" id="password-input" placeholder="Masukkan Password" />
@@ -30,6 +31,6 @@
   <div id="content-section"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script src="app.js" defer></script></p>
+  <script src="app.js" defer></script></center>
 </body>
 </html>
