--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
   <div id="content-section"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script src="app.js" defer></script></center>
+  <script src="app.js" defer></script><p align=center><font size=2>Coding by dru90n @ 2013 - 2025</font></p></center>
 </body>
 </html>
